# haskell

./: .gitignore  ;  README.md
.obsidian/: workspace.json
FromFirstPrinciples/Ch10_Folding/: ex.hs  main.hs
FromFirstPrinciples/Ch12_SignalingAdversity/: ex.hs  main.hs
FromFirstPrinciples/Ch13_BuildingProjects/: hello.cabal
FromFirstPrinciples/Ch13_Projects/: ex.hs
FromFirstPrinciples/Ch14_Testing/: note.md  trivial.hs
FromFirstPrinciples/Ch15_Monoid_Semigroup/: Ex.hs  Madness.hs  MonoidTest.hs  Optional.hs
FromFirstPrinciples/Ch16_Functor/: Ex.hs  NatrualTransformation.hs
FromFirstPrinciples/Ch17_Applicative/: List.hs  Main.hs
FromFirstPrinciples/Ch20_Foldable/: Ex.hs  Main.hs
FromFirstPrinciples/Ch21_Traversable/: Ex.hs  Main.hs
FromFirstPrinciples/Ch22_Reader/: Log.hs  MonadFunction.hs
FromFirstPrinciples/Ch23_State/: Main.hs
FromFirstPrinciples/Ch24_Parsing/: Backtrack.hs  IniParse.hs  Token.hs
FromFirstPrinciples/Ch26_Monad_Transformers/: Discount.hs  OuterInner.hs
FromFirstPrinciples/Ch27_Nonstrictness/: Main.hs
FromFirstPrinciples/Ch2_BasicExpressionAndFunctions/: exe1.hs  exe2.hs  learn.hs
FromFirstPrinciples/Ch3_Strings/: ex.hs  print3.hs
FromFirstPrinciples/Ch4_BasicDatatypes/: ex.hs  mood.hs
FromFirstPrinciples/Ch5_Types/: ch5.hs  ch5_ex_arith.hs  ch5_ex_sing.hs  ch5_ex_type_known_do.hs  note.md
FromFirstPrinciples/Ch6_TypeClasses/: ch6.hs
FromFirstPrinciples/Ch7_Function_Patterns/: arith2.hs  employee.hs  guard_ex.hs
FromFirstPrinciples/Ch9_List/: main.hs
LearnYouAHaskell/12/: walkTheLine.hs
ProgrammingInHaskell/Ch1-Introduction/: Main.hs
ProgrammingInHaskell/Ch2-FirstSteps/: Ex.hs
ProgrammingInHaskell/Ch3-TypesAndClasses/: Main.hs
ProgrammingInHaskell/Ch4-Functions/: Ex.hs
ProgrammingInHaskell/Ch5-ListComprehensions/: Ch5.hs  Main.hs
ProgrammingInHaskell/Ch6-Recursive/: Ex.hs
ProgrammingInHaskell/Ch7-HighOrderFunctions/: Ch7-HighOrderFunctions.cabal  ChangeLog.md
ProgrammingInHaskell/Ch8-DeclaringTypesAndClasses/: ChangeLog.md  README.md
RealWorldHaskell/Ch18_MonadTramsformer/: CountEntriesT.hs
RealWorldHaskell/Ch1Start/: README.md
RealWorldHaskell/Ch1_Start/: README.md  quux.txt  wc.hs
RealWorldHaskell/Ch2_TypeAndFunction/: README.md
RealWorldHaskell/Ch3_DefineTypes_StreamFunctions/: README.md  Tree.hs
RealWorldHaskell/Ch5_Json/: Main.hs  README.md  SimpleJSON.hs
RealWorldHaskell/Ch6_Typeclasses/: AutoDerivation.hs  README.md
challenges/: user-number-range.hs
from-first-principles/Ch10_Folding/: main.hs
from-first-principles/Ch11_RuleTheTypes/: ex.hs  main.hs
from-first-principles/Ch14_Testing/: trivial.hs
from-first-principles/Ch15_Monoid_Semigroup/: Ex.hs  MonoidTest.hs  Optional.hs
from-first-principles/Ch16_Functor/: FixMe.hs  FlipFunctor.hs  Main.hs  MoreStruct.hs
from-first-principles/Ch17_Applicative/: BadMonoid.hs
from-first-principles/Ch18_Monad/: ApplicationComposition.hs  BadMonad.hs  Ex.hs  Main.hs
from-first-principles/Ch20_Foldable/: Ex.hs
from-first-principles/Ch22_Reader/: Ex.hs  Main.hs
from-first-principles/Ch23_State/: Ex.hs  Main.hs
from-first-principles/Ch24_Parsing/: Main.hs
from-first-principles/Ch25_Composing_Type/: Main.hs  composing-types.md
from-first-principles/Ch26_Monad_Transformers/: Ex.hs  Main.hs  OuterInner.hs  UglyStack.hs  monad-transformers.md
from-first-principles/Ch26_Monad_Transformers/scotty-example/: scotty-example.cabal
from-first-principles/Ch2_BasicExpressionAndFunctions/: learn.hs
from-first-principles/Ch3_Strings/: print3.hs
from-first-principles/Ch5_Types/: ch5_ex_arith.hs  ch5_ex_sing.hs  ch5_ex_type_known_do.hs
from-first-principles/Ch6_TypeClasses/: ch6.hs  ch6_ex.hs
from-first-principles/Ch7_Function_Patterns/: ch7_ex.hs
from-first-principles/Ch8_Recursive/: ex.hs
from-first-principles/Ch9_List/: ex.hs
from-first-principles/ch2-basic-expression-and-functions/: exe1.hs  exe2.hs
from-first-principles/ch3-strings/: ex.hs
from-first-principles/ch4-basic-data-types/: mood.hs
from-first-principles/ch5-types/: ch5.hs  note.md
haskell-in-depth/: haskell-in-depth.cabal
haskell-in-depth/ch01/: Ch01Lib.hs  Function and types.md  ch1.md  vocab1.hs  vocab2.hs  vocab3.hs
haskell-in-depth/ch02/: Type Classes.md  ch2.md
haskell-in-depth/ch02/expr/: Expr.hs
haskell-in-depth/ch02/person/: person.hs
haskell-in-depth/ch02/radar/: Main.hs  Radar.hs
haskell-in-depth/ch03/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs  ch3.md
haskell-in-depth/ch04/: modules-packages-projects.md
haskell-in-depth/ch04/Data/: Stack.hs
haskell-in-depth/ch04/Tests/: TestStack.hs
haskell-in-depth/ch05/: IORefTest.hs  StateTest.hs  dicegame.hs  gcd.hs  genSql.hs  maybe.hs  reader.hs  sumList.hs  weapons.hs
haskell-in-depth/ch06/: MonadTransformers.hs
haskell-in-depth/ch06/du/: App.hs  AppRWST.hs  AppTypes.hs  DirTree.hs  FileCounter.hs  Main.hs  Utils.hs
haskell-in-depth/ch06/rpn/: EvalRPN.hs  EvalRPNTrans.hs  evalrpn1.hs  evalrpn2.hs
haskell-in-depth/tests/radar/: Test.hs
learn-you-a-haskell/Ch12/: walkTheLine.hs
learn-you-a-haskell/Ch14/: few-more-monads.lhs
programming-in-haskell/Ch1-Introduction/: Main.hs
programming-in-haskell/Ch10-Interactive-Programming/: Ex10.hs  Hangman.hs  Life.hs  Nim.hs  interactive-programming.lhs
programming-in-haskell/Ch11-Unbeatable-Tic-Tac-Toe/: TicTacToe.hs
programming-in-haskell/Ch12-Monads/: Ch12.lhs  Ex12.hs  ReaderExp.hs  functor-applicative-monad.lhs
programming-in-haskell/Ch13-MonadicParsing/: MonadicParsing.lhs  monadic-parsing.lhs
programming-in-haskell/Ch14-Foldable-Traversable/: foldable.lhs
programming-in-haskell/Ch15-LazyEvaluation/: lazy-evaluation.lhs
programming-in-haskell/Ch16-Reasoing-About-Programs/: reasoning-about-programs.lhs
programming-in-haskell/Ch2-FirstSteps/: Ex2.hs  Main.lhs
programming-in-haskell/Ch3-TypesAndClasses/: types-and-classes.lhs
programming-in-haskell/Ch4-Functions/: Ex.hs  Ex4.hs  defining-functions.lhs
programming-in-haskell/Ch5-ListComprehensions/: Ch5.hs  Ex.hs  Ex5.hs
(+140 files in other folders)
