cabal-version:      2.4
name:               haskell-in-depth
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Juanyong YANG
maintainer:         juanyong.yang@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

data-files:
    data/text/hamlet.txt

library radar-lib
    exposed-modules: Radar
    hs-source-dirs:  ch02/radar
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    default-extensions:
        GADTs,
        DeriveAnyClass
    build-depends:
        base ^>=4.15
    default-language: Haskell2010

library expr-lib
    exposed-modules: Expr
    hs-source-dirs: ch02/expr
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    default-extensions:
        GADTs
    build-depends:
        base ^>=4.15,
        text-show
    default-language: Haskell2010

executable vocab1
    hs-source-dirs:   ch01
    main-is:          vocab1.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0, text == 1.2.*
    ghc-options:
        -Wall
        -Werror
    default-language: Haskell2010

executable vocab2
    hs-source-dirs:   ch01
    main-is:          vocab2.hs
    other-modules:    Ch01Lib
    build-depends:    base ^>=4.15.0.0,
                      text == 1.2.*
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    default-extensions:
        OverloadedStrings
    default-language: Haskell2010

executable vocab3
    hs-source-dirs:   ch01
    main-is:          vocab3.hs
    other-modules:    Ch01Lib
    build-depends:
        base ^>=4.15.0.0,
        text == 1.2.*,
        fmt,
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    default-extensions:
        OverloadedStrings
    default-language: Haskell2010

executable radar
    hs-source-dirs:   ch02/radar
    main-is:          Main.hs
    other-modules:    Radar
    build-depends:
        base ^>=4.15.0.0,
        text == 1.2.*,
        fmt,
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    default-extensions:
        OverloadedStrings,
        GADTs,
        DeriveAnyClass,
        StandaloneDeriving
    default-language: Haskell2010

executable person
    hs-source-dirs:  ch02/person
    main-is:         Person.hs
    build-depends:
        base ^>=4.15,
        text-show
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    default-extensions:
        GADTs,
        OverloadedStrings
    default-language: Haskell2010

executable stock
    hs-source-dirs:  ch03
    main-is:         Main.hs
    other-modules:
        Params
        QuoteData
        StatReport
        Charts
        HtmlReport
    build-depends:
        base ^>=4.15,
        text,
        mtl,
        bytestring,
        time,
        fmt,
        colonnade,
        blaze-html,
        blaze-colonnade,
        Chart,
        Chart-diagrams ^>=1.9.3,
        cassava,
        optparse-applicative
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
    -- default-extensions:
    --     GADTs,
    --     OverloadedStrings
    default-language: Haskell2010

executable genSql
  main-is: genSql.hs
  hs-source-dirs:
      ch05
  ghc-options:
    -- -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-top-binds
    -Wno-orphans
  build-depends:
      base ^>=4.15
    , text
    , mtl
  default-language: Haskell2010

executable evalrpn1
  main-is: evalrpn1.hs
  other-modules:
      EvalRPN
  hs-source-dirs:
      ch06/rpn
  ghc-options:
   -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
  build-depends:
      base ^>=4.15
    , mtl
  default-language: Haskell2010

executable evalrpn2
  main-is: evalrpn2.hs
  other-modules:
      EvalRPNTrans
  hs-source-dirs:
      ch06/rpn
  ghc-options:
   -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
  build-depends:
      base ^>=4.15
    , mtl
  default-language: Haskell2010

executable du
  main-is: Main.hs
  other-modules:
      App
    --   AppRTWTST
      AppRWST
      AppTypes
      DirTree
    --   DiskUsage
      FileCounter
      Utils
    --   Paths_hid_examples
  hs-source-dirs:
      ch06/du
  default-extensions:
      RecordWildCards
      NamedFieldPuns
      OverloadedStrings
  other-extensions:
      GeneralizedNewtypeDeriving
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-top-binds
    -Wno-orphans
  build-depends:
      base ^>=4.15
    , directory
    , extra
    , filepath
    , mtl
    , optparse-applicative
    , text
    , text-show
    , unix-compat
  default-language: Haskell2010

test-suite radar-test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: tests/radar
    build-depends:
        base ^>=4.15,
        radar-lib,
        random
    default-language: Haskell2010 